samples/_failures_safe/1761475417_faf78e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_421cf60a.c: In function ‘main’:
./samples/SAFE/__tmp_421cf60a.c:175: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_421cf60a.c:174:5: error: expected declaration or statement at end of input
  174 |     if
      |     ^~
